--- a/src/universidadgrupo33/vistas/JIFConsultaAlumnoXMateria.form
+++ b/src/universidadgrupo33/vistas/JIFConsultaAlumnoXMateria.form
@@ -50,7 +50,7 @@
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="268" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-              <Component id="jbSalir" min="-2" max="-2" attributes="0"/>
+              <Component id="jbSalir" min="-2" pref="40" max="-2" attributes="0"/>
               <EmptySpace pref="38" max="32767" attributes="0"/>
           </Group>
       </Group>
